--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ VITE_APP_VERSION="0.0.0"
 VITE_APP_BASE_URL="your_app_base_url_here"
 
 VITE_GOOGLE_GEMINI_API_KEY="your_api_key_here"
+
+VITE_GOOGLE_GEMINI_MODEL="gemini-1.5-flash"
